# snaphu-py

./: .cmake-format.yaml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE-BSD-3-Clause  README.md  pyproject.toml
.github/: CODEOWNERS  codecov.yml
.github/workflows/: cd.yml  ci.yml
ci/: min-reqs.txt
src/snaphu/: __init__.py  _check.py  _conncomp.py  _snaphu.py  _unwrap.py  _util.py  _version.pyi
src/snaphu/io/: __init__.py  __init__.pyi  _dataset.py  _mmap_array.py  _raster.py
test/: test_conncomp.py  test_snaphu.py  test_unwrap.py  test_util.py  test_version.py
test/io/: test_raster.py
