[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "snaphu"
dynamic = ["version"]

[tool.black]
preview = true

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/snaphu/_version.py"]

[tool.setuptools_scm]
write_to = "src/snaphu/_version.py"
